fix: clan search now uses custom-scrollbar

--- a/frontend-next-migration/src/preparedPages/ClanPages/ui/_components/clanoverview/clanViewAndSearch/ClanSearchAndView.module.scss
+++ b/frontend-next-migration/src/preparedPages/ClanPages/ui/_components/clanoverview/clanViewAndSearch/ClanSearchAndView.module.scss
@@ -37,6 +37,7 @@
     max-height: 40vh;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+    @include custom-scrollbar;
 }
 
 .clanList {
@@ -64,6 +65,7 @@
         max-height: 80vh;
         overflow-y: auto;
         -webkit-overflow-scrolling: touch;
+        @include custom-scrollbar;
     }
 
     .mobileToggleClanList.collapsed {
